[package]
name = "Secure_File_System"
version = "0.1.2"
edition = "2024"
description = "a custom file system"
license = "Apache-2.0"
repository = "https://github.com/Cyclic007/SFS"
readme = "README.md"

[dependencies]
aes = "0.9.0"
fuse_mt = "0.6.3"
lazy_static = "1.5.0"
log = "0.4.29"
sha_256 = "1.0.1"
